# traffic_route_update_etl

./: GOOGLE_CLOUD_SCHEDULER_SETUP.md  README.md  app.py  functions.py  pyproject.toml  requirements.txt  requirments.txt  route_check.py  test.py  test_single_run.py
.github/workflows/: traffic-monitoring.yml
data/: route_data.json
